--- a/index.html
+++ b/index.html
@@ -14,6 +14,6 @@
     <h1>sinon sa va</h1>
     <h1>Mon discord Killianworldet#3762</h1>
     <h1>salut les Pro</h1>
-    <a href="hey.vbs" download="hey">telecharger hey.vbs</a>
+    <a href="hey.vbs" download="hey.vbs">telecharger hey.vbs</a>
 </body>
 <html>
