--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <h1>en cours de construction ou non</h1>
     <h1>sinon sa va</h1>
     <h1>Mon discord Killianworldet#3762</h1>
-    <h1>jouer a un jeu fun https://killianworldet.github.io/gameclient/</h1>
+    <a href ="https://killianworldet.github.io/gameclient/">joueur a un jeu fun</a>
     <a href="hey.vbs" download="hey.vbs">telecharger hey.vbs</a>
 </body>
 <html>
