--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
     <h1>en cours de construction ou non</h1>
     <h1>sinon sa va</h1>
     <h1>Mon discord Killianworldet#3762</h1>
-    <a href ="https://killianworldet.github.io/gameclient/">joueur a un jeu fun</a>
+      <h1>MODIF APRES plusieur mois il yaura surement de futur chose </h1>
+      <h1>ou soi je delete le site <h1>
+        <a href ="https://killianworldet.github.io/gameclient/">joueur a un jeu fun</a>
     <a href="hey.vbs" download="hey.vbs">telecharger hey.vbs</a>
 </body>
 <html>
