--- a/index.html
+++ b/index.html
@@ -17,5 +17,19 @@
       <h1>ou soi je delete le site <h1>
         <a href ="https://killianworldet.github.io/gameclient/">joueur a un jeu fun</a>
     <a href="hey.vbs" download="hey.vbs">telecharger hey.vbs</a>
+          <p>A typical arithmetic operation takes two numbers and produces a new number.</p>
+ 
+<p id="demo"></p>
+ 
+<button onclick="document.getElementById('demo').innerHTML = random(32,512)">Click Me</button>
+<script>
+ 
+ 
+ 
+ 
+function random(min, max){
+    return Math.floor(Math.random() * (max - min) + min)
+    
+}
 </body>
 <html>
