--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
 <link rel="manifest" href="icone/site.webmanifest">
 </head>
 <body style="background-color: grey;">
-    <h1>en cours de construction ou non</h1>
-    <h1>sinon sa va</h1>
-    <h1>Mon discord Killianworldet#3762</h1>
+    <h1>A simply Website Where you can learn more about me</h1>
+    <h1>discord : Killianworldet</h1>
+    <h1></h1>
       <h1>MODIF APRES plusieur mois il yaura surement de futur chose </h1>
       <h1>ou soi je delete le site <h1>
         <a href ="https://killianworldet.github.io/gameclient/">joueur a un jeu fun</a>
