--- a/index.html
+++ b/index.html
@@ -12,7 +12,4 @@
 <body style="background-color: grey;">
     <h1>A simply Website Where you can learn more about me</h1>
     <h1>discord : Killianworldet</h1>
-    <h1></h1>
-      <h1>MODIF APRES plusieur mois il yaura surement de futur chose </h1>
-      <h1>ou soi je delete le site <h1>
-        <a href ="https://killianworldet.github.io/gameclient/">joueur a un jeu fun</a>
+    <h1>Maybe I Add In The Futur More Things</h1>
