--- a/index.html
+++ b/index.html
@@ -13,3 +13,4 @@
     <h1>A simply Website Where you can learn more about me</h1>
     <h1>discord : Killianworldet</h1>
     <h1>Maybe I Add In The Futur More Things</h1>
+<h1> My firefox extension ( because i dont have money for buy the chrome dev console for 5€ ) https://addons.mozilla.org/fr/firefox/addon/how-many-characters-they-have/ </h1>
